objects/SMAX_PS_Translation__c.object
<CustomObject>
    <description>Used to translate the WO fields for output docs.  This is needed for offline use by the mobile</description>
    <label>Translation</label>
    <nameField>
        <label>Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Translations</pluralLabel>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>SMAX_Dear__c</fullName>
        <description>translation for scheduled email template</description>
        <inlineHelpText>translation for scheduled email template</inlineHelpText>
        <label>Dear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_NO__c</fullName>
        <label>NO</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_N_A__c</fullName>
        <description>Used to hols value for N/A or Not Applicable</description>
        <label>N/A</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_VAT__c</fullName>
        <label>VAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_YES__c</fullName>
        <label>YES</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_City__c</fullName>
        <description>for technician schedule vf email</description>
        <inlineHelpText>for technician schedule vf email</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Date__c</fullName>
        <label>Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Note__c</fullName>
        <description>Added to allow for new field in the Parts section to be added for Italy</description>
        <label>Note</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Email__c</fullName>
        <label>Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Model__c</fullName>
        <label>Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Account__c</fullName>
        <description>for technician schedule vf email</description>
        <inlineHelpText>for technician schedule vf email</inlineHelpText>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>BW</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CL</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DK</fullName>
                </value>
                <value>
                    <fullName>DO</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FJ</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>HK</fullName>
                </value>
                <value>
                    <fullName>HU</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>LI</fullName>
                </value>
                <value>
                    <fullName>LK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Discount__c</fullName>
        <label>Discount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Email_ID__c</fullName>
        <label>Email ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_End_Date__c</fullName>
        <label>End Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Quantity__c</fullName>
        <label>Quantity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Equipment__c</fullName>
        <description>for schedule technician template</description>
        <inlineHelpText>for schedule technician template</inlineHelpText>
        <label>Equipment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PO_Number__c</fullName>
        <description>for schedule technician email</description>
        <inlineHelpText>for schedule technician email</inlineHelpText>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Quoted_By__c</fullName>
        <label>Quoted By:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_System_ID__c</fullName>
        <label>System ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Base_Price__c</fullName>
        <description>Denotes the base price for an estimate</description>
        <inlineHelpText>Denotes the base price for an estimate</inlineHelpText>
        <label>Base Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Fax_Number__c</fullName>
        <label>Fax Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Order_Type__c</fullName>
        <description>for technician scheduling email template</description>
        <inlineHelpText>for technician scheduling email template</inlineHelpText>
        <label>Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Start_Date__c</fullName>
        <label>Start Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Tool_Notes__c</fullName>
        <label>Tool Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Tools_Used__c</fullName>
        <label>Tools Used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Unit_Price__c</fullName>
        <label>Unit Price</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Date_Format__c</fullName>
        <description>mm/dd/yyyy or dd/mm/yyyy</description>
        <inlineHelpText>mm/dd/yyyy or dd/mm/yyyy</inlineHelpText>
        <label>Date Format</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Description__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Field_Notes__c</fullName>
        <description>for schedule technician vf email template</description>
        <inlineHelpText>for schedule technician vf email template</inlineHelpText>
        <label>Field Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Page_Number__c</fullName>
        <label>Page Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Part_Number__c</fullName>
        <label>Part Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Record_Type__c</fullName>
        <description>for technician schedule email</description>
        <inlineHelpText>for technician schedule email</inlineHelpText>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Total_Price__c</fullName>
        <label>Total Price</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_EUROIMMUN_Product__c</fullName>
        <label>EUROIMMUN Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Address_Name__c</fullName>
        <label>Address Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Bill_To_Name__c</fullName>
        <label>Bill To Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Billing_Type__c</fullName>
        <description>for scheduling email template</description>
        <inlineHelpText>for scheduling email template</inlineHelpText>
        <label>Billing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Equipment_ID__c</fullName>
        <label>Equipment ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Order_Status__c</fullName>
        <label>Order Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Price_Quotes__c</fullName>
        <label>Price Quotes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Activity_Code__c</fullName>
        <label>Activity Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Address_Line1__c</fullName>
        <label>Address Line1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Address_Line2__c</fullName>
        <label>Address Line2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Address_Line3__c</fullName>
        <label>Address Line3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Duration_hr_s__c</fullName>
        <description>for schedule email vf template</description>
        <inlineHelpText>for schedule email vf template</inlineHelpText>
        <label>Duration:  hr(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Labor_Details__c</fullName>
        <label>Labor Details</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Material_Used__c</fullName>
        <label>Material Used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_No_Parts_Used__c</fullName>
        <description>Message to display on FSR when No Parts are Used</description>
        <label>No Parts Used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Work_Complete__c</fullName>
        <label>Work Complete</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contact_Person__c</fullName>
        <description>for schedule technician vf template</description>
        <inlineHelpText>for schedule technician vf template</inlineHelpText>
        <label>Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_FSR_Email_Body__c</fullName>
        <label>FSR Email Body</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Location_Notes__c</fullName>
        <description>for schedule technician email vf template</description>
        <inlineHelpText>for schedule technician email vf template</inlineHelpText>
        <label>Location Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PM_OQ_IPV_Left__c</fullName>
        <label>PM OQ IPV Left</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Purchase_Order__c</fullName>
        <label>Purchase Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Report__c</fullName>
        <label>Service Report</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_State_Province__c</fullName>
        <description>for schedule technician vf template</description>
        <inlineHelpText>for schedule technician vf template</inlineHelpText>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Total_Discount__c</fullName>
        <label>Total Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Address_Website__c</fullName>
        <label>Address Website</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Calibrated_Tool__c</fullName>
        <label>Calibrated Tool</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SLA_Terms_Notes__c</fullName>
        <description>for schedule email vf template</description>
        <inlineHelpText>for schedule email vf template</inlineHelpText>
        <label>SLA Terms Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Start_Date_Time__c</fullName>
        <description>for schedule technician vf email template</description>
        <inlineHelpText>for schedule technician vf email template</inlineHelpText>
        <label>Start Date/Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Zip_Postal_Code__c</fullName>
        <description>for schedule technician vf template</description>
        <inlineHelpText>for schedule technician vf template</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Assignment_Dates__c</fullName>
        <description>for schedule technician vf email template</description>
        <inlineHelpText>for schedule technician vf email template</inlineHelpText>
        <label>Assignment Dates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Customer_Contact__c</fullName>
        <label>Customer Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Location_Details__c</fullName>
        <description>for scheduling email template vf</description>
        <inlineHelpText>for scheduling email template vf</inlineHelpText>
        <label>Location Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Long_Description__c</fullName>
        <label>Long Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Part_Description__c</fullName>
        <label>Part Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Purpose_of_Visit__c</fullName>
        <label>Purpose of Visit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Estimate__c</fullName>
        <label>Service Estimate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Term_Details_FSR__c</fullName>
        <label>Term Details FSR</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Terms_Conditions__c</fullName>
        <label>Terms &amp; Conditions</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Total_Base_Price__c</fullName>
        <label>Total Base Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Work_Description__c</fullName>
        <label>Work Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_EUROIMMUN_Address_Name__c</fullName>
        <label>EUROIMMUN Address Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_EUROIMMUN_Work_Summary__c</fullName>
        <label>EUROIMMUN Work Summary</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Address_Telephone__c</fullName>
        <label>Address Telephone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contract_End_Date__c</fullName>
        <description>for schedule technician vf email</description>
        <inlineHelpText>for schedule technician vf email</inlineHelpText>
        <label>Contract End Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Estimate_PO_Terms__c</fullName>
        <description>Should include the following text: You can submit the purchase order via fax to 0800 891 714 or via email on cc.uk@perkinelmer.com 
Please ensure the Quote Number located in the top is included on your Purchase Order. 
If your company is VAT exempt please supply the exemption certificate when sending in your Purchase Order.</description>
        <inlineHelpText>Please include: You can submit the purchase order via fax to 0800 891 714 or via email on cc.uk@perkinelmer.com 
Please ensure the Quote Number located in the top is included on your Purchase Order. 
If your company is VAT exempt please</inlineHelpText>
        <label>Estimate PO Terms</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_FSR_Email_Subject__c</fullName>
        <label>FSR Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Lot_Serial_Number__c</fullName>
        <label>Lot/Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_No_Labor_Recorded__c</fullName>
        <label>No Labor Recorded</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Short_Description__c</fullName>
        <label>Short Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Total_Labor_Hours__c</fullName>
        <label>Total Labor Hours</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Work_Order_Number__c</fullName>
        <label>Work Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_EUROIMMUN_Address_Line1__c</fullName>
        <label>EUROIMMUN Address Line1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_EUROIMMUN_Address_Line2__c</fullName>
        <label>EUROIMMUN Address Line2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_EUROIMMUN_Address_Line3__c</fullName>
        <label>EUROIMMUN Address Line3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_EUROIMMUN_Website_Phone__c</fullName>
        <label>EUROIMMUN Website &amp; Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contract_Line_Item__c</fullName>
        <description>for schedule technician vf template</description>
        <inlineHelpText>for schedule technician vf template</inlineHelpText>
        <label>Contract/Line Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Customer_Signature__c</fullName>
        <label>Customer Signature</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Equipment_Location__c</fullName>
        <label>Equipment Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Total_Travel_Hours__c</fullName>
        <label>Total Travel Hours</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Access_Instructions__c</fullName>
        <description>for schedule technician vf email</description>
        <inlineHelpText>for schedule technician vf email</inlineHelpText>
        <label>Access Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contract_Start_Date__c</fullName>
        <description>for schedule technician email vf template</description>
        <inlineHelpText>for schedule technician email vf template</inlineHelpText>
        <label>Contract Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Estimate_Email_Body__c</fullName>
        <label>Estimate Email Body</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Problem_Description__c</fullName>
        <label>Problem Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Installed_Product_ID__c</fullName>
        <description>for schedule technician vf email template</description>
        <inlineHelpText>for schedule technician vf email template</inlineHelpText>
        <label>Installed Product ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Material_Description__c</fullName>
        <description>schedule technician email vf</description>
        <inlineHelpText>schedule technician email vf</inlineHelpText>
        <label>Material Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Requested_Start_Date__c</fullName>
        <label>Requested Start Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Technician_Signature__c</fullName>
        <label>Technician Signature</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_EUROIMMUN_Reason_for_Visit__c</fullName>
        <label>EUROIMMUN Reason for Visit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contract_Entitlements__c</fullName>
        <description>for schedule technician vf email template</description>
        <inlineHelpText>for schedule technician vf email template</inlineHelpText>
        <label>Contract Entitlements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Last_Calibration_Date__c</fullName>
        <label>Last Calibration Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Next_Calibration_Date__c</fullName>
        <label>Next Calibration Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Quotation_Description__c</fullName>
        <label>Quotation Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Remote_Service_Report__c</fullName>
        <description>Title for Remote Service Report</description>
        <inlineHelpText>Title for Remote Service Report</inlineHelpText>
        <label>Remote Service Report</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Term_Details_Estimate__c</fullName>
        <label>Term Details Estimate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Estimate_Email_Subject__c</fullName>
        <label>Estimate Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Purchase_Order_Details__c</fullName>
        <description>for schedule technician email vf</description>
        <inlineHelpText>for schedule technician email vf</inlineHelpText>
        <label>Purchase Order Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_EUROIMMUN_Instrument_Working__c</fullName>
        <label>EUROIMMUN Instrument Working?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Term_Details_Estimate_2__c</fullName>
        <label>Term Details Estimate 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_No_Calibrated_Tools_Used__c</fullName>
        <label>No Calibrated Tools Used</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_Service_Order_Number__c</fullName>
        <description>Denotes the Service Order Number from SAP</description>
        <inlineHelpText>Denotes the Service Order Number from SAP</inlineHelpText>
        <label>SAP Service Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_has_been_assigned_to_you__c</fullName>
        <description>For assignment email template</description>
        <inlineHelpText>For assignment email template</inlineHelpText>
        <label>has been assigned to you :</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Total_Amount_before_taxes__c</fullName>
        <label>Total Amount before taxes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Kind_Regards_Customer_Care__c</fullName>
        <description>for schedule technician vf template</description>
        <inlineHelpText>for schedule technician vf template</inlineHelpText>
        <label>Kind Regards, Customer Care</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Work_Order_Problem_Summary__c</fullName>
        <description>for scheduled technician email</description>
        <inlineHelpText>for scheduled technician email</inlineHelpText>
        <label>Work Order Problem Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Representative_Name__c</fullName>
        <label>Service Representative Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Customer_Required_Start_Date__c</fullName>
        <label>Customer Required Start Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Client_Ability_to_Resolve_Issue__c</fullName>
        <description>for schedule technician vf email</description>
        <inlineHelpText>for schedule technician vf email</inlineHelpText>
        <label>Client Ability to Resolve Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Terms_for_Customer_Quote_Accept__c</fullName>
        <description>Should include the following text: To be completed by the customer on acceptance of prices quoted above</description>
        <inlineHelpText>Should include the following text: To be completed by the customer on acceptance of prices quoted above</inlineHelpText>
        <label>Terms for Customer Quote Acceptance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>